tests/baselines/reference/unicodeExtendedEscapesInStrings20(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInStrings20.ts(1,13): error TS1125: Hexadecimal digit expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInStrings20.ts (1 errors) ====
    var x = "\u{";
                
!!! error TS1125: Hexadecimal digit expected.
    